--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-browser-dynamic": "^5.2.8",
     "@angular/platform-server": "^5.2.8",
     "@angular/router": "^5.2.8",
+    "@ngrx/effects": "^7.0.0",
+    "@ngrx/router-store": "^7.0.0",
+    "@ngrx/store": "^7.0.0",
+    "@ngrx/store-devtools": "^7.0.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
     "@pluritech/auth-service": "^2.0.0",
@@ -42,9 +46,10 @@
     "ng2-bootstrap-modal": "^1.0.1",
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.2.1",
+    "ngrx-store-localstorage": "^6.0.0",
     "ngx-mask": "^2.4.4",
     "ngx-quill": "^2.1.2",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.12",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
