--- a/package.json
+++ b/package.json
@@ -13,29 +13,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.8",
-    "@angular/common": "^5.2.8",
-    "@angular/compiler": "^5.2.8",
-    "@angular/core": "^5.2.8",
-    "@angular/forms": "^5.2.8",
-    "@angular/http": "^5.2.8",
-    "@angular/platform-browser": "^5.2.8",
-    "@angular/platform-browser-dynamic": "^5.2.8",
-    "@angular/platform-server": "^5.2.8",
-    "@angular/router": "^5.2.8",
+    "@angular/animations": "7.2.1",
+    "@angular/common": "7.2.1",
+    "@angular/compiler": "7.2.1",
+    "@angular/core": "7.2.1",
+    "@angular/forms": "7.2.1",
+    "@angular/http": "7.2.1",
+    "@angular/platform-browser": "7.2.1",
+    "@angular/platform-browser-dynamic": "7.2.1",
+    "@angular/platform-server": "7.2.1",
+    "@angular/router": "7.2.1",
     "@ngrx/effects": "^7.0.0",
     "@ngrx/router-store": "^7.0.0",
     "@ngrx/store": "^7.0.0",
     "@ngrx/store-devtools": "^7.0.0",
-    "@ngx-translate/core": "^9.1.1",
-    "@ngx-translate/http-loader": "^2.0.1",
-    "@pluritech/auth-service": "^2.0.0",
-    "@pluritech/dialog-service": "2.0.0",
-    "@pluritech/ng2-responsive-table": "^0.1.32",
-    "@pluritech/pagination": "^1.0.2",
-    "@pluritech/server-service": "^2.0.0",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "admin-lte": "^2.4.2",
-    "angular2-toaster": "^5.0.1",
+    "angular2-toaster": "^7.0.0",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
@@ -49,12 +44,14 @@
     "ngrx-store-localstorage": "^6.0.0",
     "ngx-mask": "^2.4.4",
     "ngx-quill": "^2.1.2",
-    "rxjs": "^5.5.12",
-    "zone.js": "^0.8.4"
+    "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.28"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.1",
-    "@angular/compiler-cli": "^5.2.8",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "7.2.2",
+    "@angular/compiler-cli": "7.2.1",
     "@types/icheck": "^0.8.29",
     "@types/jasmine": "2.5.38",
     "@types/jquery": "^2.0.48",
@@ -71,6 +68,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "2.6.2"
+    "typescript": "3.2.4"
   }
 }
