--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "fastclick": "^1.0.6",
+    "firebase": "^5.8.0",
     "icheck": "^1.0.2",
     "jquery": "^3.1.1",
     "jquery-slimscroll": "^1.3.8",
