--- a/package.json
+++ b/package.json
@@ -17,20 +17,22 @@
     "@angular/common": "7.2.1",
     "@angular/compiler": "7.2.1",
     "@angular/core": "7.2.1",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "7.2.1",
     "@angular/http": "7.2.1",
     "@angular/platform-browser": "7.2.1",
     "@angular/platform-browser-dynamic": "7.2.1",
     "@angular/platform-server": "7.2.1",
     "@angular/router": "7.2.1",
-    "@ngrx/effects": "^7.0.0",
-    "@ngrx/router-store": "^7.0.0",
-    "@ngrx/store": "^7.0.0",
-    "@ngrx/store-devtools": "^7.0.0",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/router-store": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "admin-lte": "^2.4.2",
     "angular2-toaster": "^7.0.0",
+    "angularfire2": "^5.1.1",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
@@ -42,10 +44,10 @@
     "ng2-bootstrap-modal": "^1.0.1",
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.2.1",
-    "ngrx-store-localstorage": "^6.0.0",
+    "ngrx-store-localstorage": "^5.0.1",
     "ngx-mask": "^2.4.4",
     "ngx-quill": "^2.1.2",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.2.2",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.28"
   },
@@ -69,6 +71,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "3.2.4"
+    "typescript": "3.1.1"
   }
 }
