--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "./node_modules/.bin/tslint --project tslint.json",
     "e2e": "ng e2e",
     "i18n": "ng-xi18n"
   },
@@ -60,6 +60,7 @@
     "@types/jquery": "^2.0.48",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
@@ -70,7 +71,13 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.2",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
+    "tslint": "~5.11.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "3.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
